Rahti2/Grafana/grafana-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
spec:
  to:
    kind: Service
    name: grafana
  port:
    targetPort: 3000
  tls:
    termination: edge #-> http

#osoite: https://grafana-connecticar.rahtiapp.fi
